# RepviCore

./: CMakeLists.recovered.txt  CMakeLists.txt  CMakePresets.json  readme.md
RepviCore/: compile_time.h  repvicore.c  repvicore.h
RepviCore/CompileTime/: config.h  macros.h
RepviCore/Core/: core_errors.h  core_types.h
RepviCore/Core/TimeSystem/: RPVC_TIME.c  RPVC_TIME.h
RepviCore/Core/Validation/inc/: RPVC_Validator_api.h
RepviCore/Core/Validation/src/: RPVC_Validator.cpp  RPVC_Validator_api.cpp
RepviCore/Core/inc/: RPVC_MEMORYPOOL.h  core_errors.h  core_types.h
RepviCore/Core/src/: MemoryPoolInternal.cpp  MemoryPoolInternal.hpp  RPVC_MEMORYPOOL.c  RPVC_MEMORYPOOL.cpp
RepviCore/Events/inc/: event_api.h  event_type.h
RepviCore/Events/src/: EventManager.cpp  EventManager.hpp  event_api.cpp
RepviCore/Platform/hal/arm/: CMakeLists.txt  RPVC_Interrupts_arm.c  RPVC_Platform_arm.c  RPVC_System_arm.c  RPVC_Time_arm.c
RepviCore/Platform/hal/riscv/: CMakeLists.txt  RPVC_Interrupts_riscv.c  RPVC_Platform_riscv.c  RPVC_System_riscv.c  RPVC_Time_riscv.c
RepviCore/Platform/hal/x86/: CMakeLists.txt  RPVC_Interrupts_x86.c  RPVC_Platform_x86.c  RPVC_System_x86.c  RPVC_Time_x86.c
RepviCore/Platform/hal/xtensa/: CMakeLists.txt  RPVC_Interrupts_xtensa.c  RPVC_Platform_xtensa.c  RPVC_System_xtensa.c  RPVC_Time_xtensa.c
RepviCore/Platform/inc/: RPVC_CompilerAbstraction.h  RPVC_Interrupts.h  RPVC_OS.h  RPVC_Platform.h  RPVC_System.h  RPVC_Time.h
RepviCore/Platform/osal/baremetal/arm/: CMakeLists.txt  RPVC_OS_arm.c
RepviCore/Platform/osal/baremetal/riscv/: CMakeLists.txt  RPVC_OS_riscv.c
RepviCore/Platform/osal/baremetal/x86/: CMakeLists.txt  RPVC_OS_x86.c
RepviCore/Platform/osal/baremetal/xtensa/: CMakeLists.txt  RPVC_OS_xtensa.c
RepviCore/Platform/osal/freertos/: CMakeLists.txt  RPVC_OS_freertos.c
RepviCore/Platform/src/: RPVC_Time_common.c  RPVC_Time_common.h
RepviCore/Subsystems/inc/: SoftwareBus.h  logging.h  logging_def.h  messaging.h
RepviCore/Subsystems/src/: LogManager.cpp  LogManager.hpp  SoftwareBus.c  SoftwareBus.h  logging.cpp  logging_impl.cpp  logging_impl.hpp
cmake/: RPVCConfig.cmake
cmake/toolchains/: arm-none-eabi.cmake  riscv-none-embed.cmake
public_inc/repvicore/: compile_time.h
public_inc/repvicore/ct/: ct_config.h  ct_macros.h
src/: repvicore.c
src/core/: core_errors.h  core_types.h
src/core/TimeSystem/: RPVC_TIME.c  RPVC_TIME.h
src/core/Validation/: RPVC_Validator.hpp  RPVC_Validator_api.cpp  RPVC_Validator_api.h
src/events/: EventManager.cpp  event_api.cpp  event_api.h  event_type.h
test/: SB_Test.cpp  main.cpp
